objects/IPM_Risk_Issue__c.object
<CustomObject>
    <description>IPMG - Used to track Risks and Issues for the IPM project</description>
    <fields>
        <fullName>Date_Opened__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>The date that the Risk/Issue was opened</description>
        <inlineHelpText>The date that the Risk/Issue was opened</inlineHelpText>
        <label>Date Opened</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies the insurer that this Risk/Issue relate to</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Risks_Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IPM_Agreement_Date_of_Risk_Issue__c</fullName>
        <label>Agreement Date of Risk/Issue</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Date_Closed__c</fullName>
        <description>The date that the Risk/Issue was closed</description>
        <inlineHelpText>The date that the Risk/Issue was closed</inlineHelpText>
        <label>Date Closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IPM_Insurer_Action_Agreement_Date__c</fullName>
        <label>Insurer Action Agreement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Insurer_Agree_on_taking_Action__c</fullName>
        <label>Insurer Agrees on taking Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IPM_Insurer_Agreed_on_Risk_Issue__c</fullName>
        <label>Insurer Agreed on Risk/Issue</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IPM_Insurer_Type__c</fullName>
        <label>Insurer Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Self Level</fullName>
                </value>
                <value>
                    <fullName>Specialised Level</fullName>
                </value>
                <value>
                    <fullName>NI Level</fullName>
                </value>
                <value>
                    <fullName>SiCorp Level</fullName>
                </value>
                <value>
                    <fullName>Across Insurer Types</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IPM_Notification_Date__c</fullName>
        <label>Notification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_QA_Approval_Date__c</fullName>
        <label>QA Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Risk_Indicator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies the Risk Indicator that this Risk/Issue belongs to</description>
        <label>Risk Indicator</label>
        <referenceTo>IPM_Risk_Indicator__c</referenceTo>
        <relationshipName>Risks_Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IPM_Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Validate</fullName>
                    <default>true</default>
                    <label>1-Validate</label>
                </value>
                <value>
                    <fullName>Agreed Actions</fullName>
                    <label>2-Agreed Actions</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                    <label>3-Closed</label>
                </value>
                <value>
                    <fullName>Open</fullName>
                    <isActive>false</isActive>
                    <label>Open</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Risk Activity / Issue</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Risk Activity / Issue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Risk Activities / Issues</pluralLabel>
    <recordTypes>
        <fullName>Issue</fullName>
        <active>true</active>
        <description>Used for Issues</description>
        <label>Issue</label>
    </recordTypes>
    <recordTypes>
        <fullName>Risk</fullName>
        <active>true</active>
        <description>Used for Risk</description>
        <label>Risk Activity</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Cannot_proceed_to_Agreed_Action</fullName>
        <active>true</active>
        <description>Key fields must be completed before moving to Agreed Action</description>
        <errorConditionFormula>TEXT(IPM_Status__c)=&quot;Agreed Actions&quot; &amp;&amp;
(
ISBLANK( IPM_Notification_Date__c ) ||
ISBLANK( TEXT(IPM_Insurer_Agreed_on_Risk_Issue__c) ) ||
ISBLANK( TEXT( IPM_Insurer_Agree_on_taking_Action__c ) ) ||
ISBLANK( IPM_Agreement_Date_of_Risk_Issue__c ) ||
ISBLANK( IPM_Insurer_Action_Agreement_Date__c )
)</errorConditionFormula>
        <errorMessage>Key fields in Validation section must be completed before moving to Agreed Action</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closed_Status_and_Date</fullName>
        <active>true</active>
        <description>Ensures that Closed Date is populated when Status is Closed</description>
        <errorConditionFormula>AND(ISBLANK(IPM_Date_Closed__c),(TEXT( IPM_Status__c )=&quot;Closed&quot;))</errorConditionFormula>
        <errorMessage>Date Closed is required when closing a Risk/Issue</errorMessage>
    </validationRules>
</CustomObject>